--- a/scraping.ipynb
+++ b/scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "61c426bb",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "80962e3c",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "a3a4e988",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "bb8187ff",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "レスポンスヘッダー:{'Content-Type': 'text/html', 'Content-Length': '19274', 'Connection': 'keep-alive', 'Date': 'Wed, 05 Nov 2025 00:41:48 GMT', 'Server': 'Apache', 'Last-Modified': 'Wed, 05 Nov 2025 00:01:18 GMT', 'Accept-Ranges': 'none', 'Vary': 'Accept-Encoding', 'Content-Encoding': 'gzip', 'X-Frame-Options': 'SAMEORIGIN', 'X-XSS-Protection': '1; mode=block', 'X-Content-Type-Options': 'nosniff', 'X-Cache': 'Miss from cloudfront', 'Via': '1.1 3ddb4dce2b89d7a72c4f50520b1e211a.cloudfront.net (CloudFront)', 'X-Amz-Cf-Pop': 'NRT57-P6', 'Alt-Svc': 'h3=\":443\"; ma=86400', 'X-Amz-Cf-Id': 'Aa_14IbgHY_t5gXV4t7Ac_rW3ymZtUwv830VwCA9jfN7CAIC9xsGDw=='}\n",
+      "レスポンスヘッダー:{'Content-Type': 'text/html', 'Content-Length': '19274', 'Connection': 'keep-alive', 'Date': 'Wed, 05 Nov 2025 01:47:32 GMT', 'Server': 'Apache', 'Last-Modified': 'Wed, 05 Nov 2025 00:01:18 GMT', 'Accept-Ranges': 'none', 'Vary': 'Accept-Encoding', 'Content-Encoding': 'gzip', 'X-Frame-Options': 'SAMEORIGIN', 'X-XSS-Protection': '1; mode=block', 'X-Content-Type-Options': 'nosniff', 'X-Cache': 'Miss from cloudfront', 'Via': '1.1 7f7459c105b363c4521133044bce479c.cloudfront.net (CloudFront)', 'X-Amz-Cf-Pop': 'NRT57-P6', 'Alt-Svc': 'h3=\":443\"; ma=86400', 'X-Amz-Cf-Id': 'T8O4OJboEYCdMPo3JuPwA6ZUNBDLUYBKGjsNMGaECRzYGTJllAgIHQ=='}\n",
       "レスポンスボディ：<!doctype html>\n",
       "<html lang=\"ja\">\n",
       "\t<head>\n",
@@ -6332,7 +6332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "04446002",
    "metadata": {},
    "outputs": [],
@@ -6344,7 +6344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "70ac66ad",
    "metadata": {},
    "outputs": [
@@ -9029,7 +9029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "c0e6df73",
    "metadata": {},
    "outputs": [
@@ -10216,7 +10216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "bcdc3378",
    "metadata": {},
    "outputs": [
@@ -10237,7 +10237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "99689f56",
    "metadata": {},
    "outputs": [
@@ -10257,7 +10257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "abb93677",
    "metadata": {},
    "outputs": [
@@ -10290,7 +10290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "46c8f45c",
    "metadata": {},
    "outputs": [
@@ -10320,7 +10320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "831d807f",
    "metadata": {},
    "outputs": [
@@ -10346,7 +10346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "d4f8235c",
    "metadata": {},
    "outputs": [
@@ -10368,6 +10368,232 @@
     "# コンテンツがない場合はNoneが返される．\n",
     "print(f\"<div>タグの中の<div>タグのテキスト：{soup_div_div.string}\")  # <div>タグ内のテキストを表示"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8eae11ab",
+   "metadata": {},
+   "source": [
+    "指定してHTMLタグで要素を検索"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "fb94b050",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<h2>タグ：<h2>\n",
+      "<span class=\"c-title__label\">\n",
+      "\t\t\t\t\t\t\t\t\t\tTopics\n",
+      "\t\t\t\t\t\t\t\t\t</span>\n",
+      "<!--IF_TRANS_HIDE:en--><span aria-hidden=\"true\" class=\"c-title__sub\">\n",
+      "\t\t\t\t\t\t\t\t\t\tトピックス\n",
+      "\t\t\t\t\t\t\t\t\t</span><!--/IF_TRANS_HIDE:en-->\n",
+      "</h2>\n",
+      "変数の型：<class 'bs4.element.Tag'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#指定したタグが使われている要素\n",
+    "h2 = soup.find('h2')\n",
+    "print(f\"<h2>タグ：{h2}\")\n",
+    "print(f\"変数の型：{type(h2)}\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e816dcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<h2>t具のリスト：[<h2>\n",
+      "<span class=\"c-title__label\">\n",
+      "\t\t\t\t\t\t\t\t\t\tTopics\n",
+      "\t\t\t\t\t\t\t\t\t</span>\n",
+      "<!--IF_TRANS_HIDE:en--><span aria-hidden=\"true\" class=\"c-title__sub\">\n",
+      "\t\t\t\t\t\t\t\t\t\tトピックス\n",
+      "\t\t\t\t\t\t\t\t\t</span><!--/IF_TRANS_HIDE:en-->\n",
+      "</h2>, <h2>\n",
+      "<span class=\"c-title__label\">\n",
+      "\t\t\t\t\t\t\t\t\t\tFeatures of <br class=\"is-sp\"/>Musashino University\n",
+      "\t\t\t\t\t\t\t\t\t</span>\n",
+      "<!--IF_TRANS_HIDE:en--><span aria-hidden=\"true\" class=\"c-title__sub\">\n",
+      "\t\t\t\t\t\t\t\t\t\t武蔵野大学の特長\n",
+      "\t\t\t\t\t\t\t\t\t</span><!--/IF_TRANS_HIDE:en-->\n",
+      "</h2>, <h2 class=\"l-top__title js-fader is-fade\">\n",
+      "\t\t\t\t\t\t\t\tMusashino TIMES\n",
+      "\t\t\t\t\t\t\t</h2>, <h2>\n",
+      "<span class=\"c-title__label\">\n",
+      "\t\t\t\t\t\t\t\t\t\tEvent\n",
+      "\t\t\t\t\t\t\t\t\t</span>\n",
+      "<!--IF_TRANS_HIDE:en--><span aria-hidden=\"true\" class=\"c-title__sub\">\n",
+      "\t\t\t\t\t\t\t\t\t\tイベント\n",
+      "\t\t\t\t\t\t\t\t\t</span><!--/IF_TRANS_HIDE:en-->\n",
+      "</h2>, <h2>\n",
+      "<span class=\"c-title__label\">\n",
+      "\t\t\t\t\t\t\t\t\t\tNews\n",
+      "\t\t\t\t\t\t\t\t\t</span>\n",
+      "<!--IF_TRANS_HIDE:en--><span aria-hidden=\"true\" class=\"c-title__sub\">\n",
+      "\t\t\t\t\t\t\t\t\t\tニュース\n",
+      "\t\t\t\t\t\t\t\t\t</span><!--/IF_TRANS_HIDE:en-->\n",
+      "</h2>, <h2>\n",
+      "<span class=\"c-title__label\">\n",
+      "\t\t\t\t\t\t\t\t\t\tAdmissions\n",
+      "\t\t\t\t\t\t\t\t\t</span>\n",
+      "<!--IF_TRANS_HIDE:en--><span aria-hidden=\"true\" class=\"c-title__sub\">\n",
+      "\t\t\t\t\t\t\t\t\t\t入試情報\n",
+      "\t\t\t\t\t\t\t\t\t</span><!--/IF_TRANS_HIDE:en-->\n",
+      "</h2>]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "h2_all = soup.find_all('h2')\n",
+    "print(f\"<h2>t具のリスト：{h2_all}\")\n",
+    "print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "b65ae52c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[35]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m a_list = soup.find_all(\u001b[33m'\u001b[39m\u001b[33ma\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m \u001b[38;5;28mall\u001b[39m \u001b[38;5;129;01min\u001b[39;00m a_list:\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43ma\u001b[49m.string\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'a' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "a_list = soup.find_all('a')\n",
+    "for all in a_list:\n",
+    "    print(f\"{a.string}\")\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8010f5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tag_id_list = soup.find_all(attrs = {'id':'top'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fb686d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#外部サイトをスクレイピングする際のコーティングの注意点"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d3e0954",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce577176",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "アクセス回数：1\n",
+      "アクセス回数：2\n",
+      "アクセス回数：3\n",
+      "アクセス回数：4\n",
+      "アクセス回数：5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for文等で特定のWEBサイトに連続にアクセスする場合は、サーバーに負荷をかけないように適切な感覚をあげる必要がある\n",
+    "for i in range (5) :\n",
+    "    time.sleep(1)\n",
+    "    print(f\"アクセス回数：{i+1}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "510fdedb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#練習問題\n",
+    "#下記のページから、出演動画一覧のタイトルを取得する\n",
+    "#https://abehiroshi.la.coocan.jp/movie/eiga.HTML\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "2f11e32d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ステータスコード：200\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = \"http://abehiroshi.la.coocan.jp/\"\n",
+    "res = requests.get(url, headers=headers)\n",
+    "res.encoding = res.apparent_encoding  # レスポンスのエンコーディングを設定\n",
+    "print(f\"ステータスコード：{res.status_code}\")  # ステータスコードを表示"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "477011c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "エラー: 「Movie」のセクションが見つかりませんでした。\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
