最終課題修正

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b984ff73",
    "metadata": {},
    "outputs": [
@@ -10537,79 +10537,60 @@
     }
    ],
    "source": [
-    "### 修正点 1: 必要なライブラリを最初にまとめてインポートします ###\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import time\n",
     "from urllib.parse import urljoin, urlparse\n",
     "\n",
-    "# --- ここからコード ---\n",
     "surl = \"https://www.musashino-u.ac.jp\" \n",
     "DOMAIN = urlparse(surl).netloc\n",
-    "\n",
-    "### 変更点: to_crawl を set から list に変更し、順序を固定します ###\n",
-    "# これにより、実行ごとにおおよそ同じ順序でクロールされます。\n",
     "to_crawl = [surl]\n",
-    "# crawled は「既に処理したか」を高速にチェックするため、set のままが効率的です。\n",
     "crawled = set() \n",
     "mapsisemap = {}\n",
     "\n",
-    "### 変更点: 処理したURLの数を数えるためのカウンターを準備します ###\n",
     "count = 0\n",
     "\n",
     "print(\"クロールを始める！！！\\n\")\n",
     "\n",
-    "# to_crawl リストが空になるまでループ\n",
+    "\n",
     "while to_crawl:\n",
-    "    ### 変更点: list の先頭からURLを1つ取り出します (pop(0)) ###\n",
     "    wwith_crawl = to_crawl.pop(0)\n",
     "\n",
     "    if wwith_crawl in crawled:\n",
     "        continue\n",
     "\n",
-    "    # アクセス前に、処理済みセットに追加\n",
+    "  \n",
     "    crawled.add(wwith_crawl)\n",
     "\n",
     "    try:\n",
-    "        # サーバーに負荷をかけないための待機\n",
     "        time.sleep(1.11)\n",
     "        \n",
-    "        # ページのHTMLを取得\n",
     "        res = requests.get(wwith_crawl)\n",
-    "        res.encoding = res.apparent_encoding # 文字化け防止\n",
+    "        res.encoding = res.apparent_encoding \n",
     "        \n",
-    "        # HTMLを解析\n",
     "        oisisounasup = BeautifulSoup(res.text, \"html.parser\")\n",
     "\n",
-    "        # <title>タグを取得\n",
     "        t_tag = oisisounasup.find(\"title\")\n",
     "        title = t_tag.string.strip() if t_tag and t_tag.string else \"（タイトルなし）\"\n",
     "        \n",
-    "        # サイトマップ辞書に「URL:タイトル」の形で保存\n",
     "        mapsisemap[wwith_crawl] = title\n",
     "        \n",
-    "        ### 変更点: カウンターを増やし、タイトルとURLを見やすく表示します ###\n",
     "        count += 1\n",
     "        print(f\"[{count}] {title}\\n  -> {wwith_crawl}\")\n",
     "\n",
-    "        # ページ内のすべての<a>タグからリンクを抽出\n",
     "        for link in oisisounasup.find_all('a', href=True):\n",
     "            href = link.get('href') \n",
     "\n",
-    "            # 相対URLを絶対URLに変換\n",
     "            absolute_url = urljoin(wwith_crawl, href)\n",
     "            \n",
-    "            # URLから不要な部分(#や?)を取り除き、正規化\n",
     "            parsed_url = urlparse(absolute_url)\n",
     "            normalized_url = parsed_url._replace(query=\"\", fragment=\"\").geturl()\n",
     "\n",
-    "            # 次にクロールするかの条件分岐\n",
     "            if (urlparse(normalized_url).netloc == DOMAIN and\n",
-    "                normalized_url not in crawled and        # まだ処理していない\n",
-    "                normalized_url not in to_crawl and        # これから処理するリストにも入っていない\n",
-    "                not any(normalized_url.lower().endswith(ext) for ext in ['.pdf', '.jpg', '.jpeg', '.png', '.gif', '.svg','bmg','.ico','webp',])): # ファイルではない\n",
+    "                normalized_url not in crawled and      \n",
+    "                normalized_url not in to_crawl and        \n",
+    "                not any(normalized_url.lower().endswith(ext) for ext in ['.pdf', '.jpg', '.jpeg', '.png', '.gif', '.svg','bmg','.ico','webp',])): \n",
     "                \n",
-    "                ### 変更点: list なので append を使って末尾に追加します ###\n",
     "                to_crawl.append(normalized_url)\n",
     "\n",
     "    except Exception as e:\n",
@@ -10617,9 +10598,7 @@
     "\n",
     "print(\"\\nクロールが完了しました！！！\")\n",
     "\n",
-    "# --- 結果の表示 ---\n",
     "print(\"\\n--- サイトマップ ---\")\n",
-    "# 辞書の内容を1行ずつ見やすく表示\n",
     "for url, title in mapsisemap.items():\n",
     "    print(f\"・{title}: {url}\")\n",
     "\n",
